# docs/swagger.yaml
@@ -44,6 +44,18 @@ definitions:
         description: 用户UUID
         type: string
     type: object
+  request.PageInfo:
+    properties:
+      keyword:
+        description: 关键字
+        type: string
+      page:
+        description: 页码
+        type: integer
+      pageSize:
+        description: 每页大小
+        type: integer
+    type: object
   request.UserLogin:
     properties:
       captcha:
@@ -83,6 +95,16 @@ definitions:
         example: 用户名
         type: string
     type: object
+  response.PageResult:
+    properties:
+      list: {}
+      page:
+        type: integer
+      pageSize:
+        type: integer
+      total:
+        type: integer
+    type: object
   response.Response:
     properties:
       code:
@@ -110,6 +132,36 @@ definitions:
 info:
   contact: {}
 paths:
+  /api/user/GetUserList:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 页码, 每页大小
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.PageInfo'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 分页获取用户列表,返回包括列表,总数,页码,每页数量
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/response.PageResult'
+                msg:
+                  type: string
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 获取系统用户列表
+      tags:
+      - User
   /api/user/captcha:
     post:
       consumes:
